--- a/gradle.properties
+++ b/gradle.properties
@@ -5,8 +5,8 @@ org.gradle.parallel=true
 
 minecraft_version=1.18.2
 mod_version=1.0.0
-maven_group=com.epherical.bozoiD
-archives_base_name=bozoiD
+maven_group=com.epherical.food_overhaul
+archives_base_name=FoodOverhaul
 
 
 ## FABRIC
