--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -1,7 +1,7 @@
 import net.fabricmc.loom.task.RemapJarTask
 
 plugins {
-    id 'fabric-loom' version '0.11-SNAPSHOT'
+    id 'fabric-loom' version '0.12-SNAPSHOT'
     id 'com.github.johnrengelman.shadow' version '7.0.0'
 }
 
@@ -75,7 +75,8 @@ sourceSets {
     main {
         resources {
             srcDirs += [
-                    "src/main/generated"
+                    "src/main/generated",
+                    rootProject.sourceSets.main.resources
             ]
         }
     }
